# MyRandomSmallProjects

./: a  task1.cpp  usageTask1.cpp
Chat/: Definitions.h  Server.c  Server.h  StringUtils.h
Chat/Server/: Server.c  Server.h  StringUtils.c  StringUtils.h
Chat/Tests/: StringUtilsTests.cpp  randomStrings  strings.txt
task1/: CMakeLists.txt  a  list.c  list.h  main.c  main.cpp  task1.cpp  task1.hh
task1/Tests/: CMakeLists.txt  listTest.cpp  tests.cpp
task1/src/: CMakeLists.txt  list.cpp  list.h
task2/: AnyType.hh  CMakeLists.txt  a
task2/Tests/: AnyTypeTests.cpp  CMakeLists.txt
task2/src/: AnyType.cpp  AnyType.hh  CMakeLists.txt
task3/: CMakeLists.txt  Definitions.hh  Parser.cpp  Parser.hh  a  main.cpp
task3/FileData/: FileData.cpp  IParsedData.hh  ParsedDirectoryData.cpp  ParsedFIleData.cpp  ParsedFileData.hh
task3/Parser/: Parser.cpp  Parser.hh  ParserOptions.hh
task3/Tests/: CMakeLists.txt  ParserTests.cpp
task3/src/: CMakeLists.txt
task3/src/FileData/: FileData.hh  IparsedData.cpp  ParsedDirectoryData.cpp  ParsedDirectoryData.hh  ParsedFIleData.cpp  ParsedFileData.hh
task3/src/Parser/: AsyncUtils.hh  Parser.cpp  Parser.hh  ParserException.cpp  ParserException.hh  ParserOptions.cpp
test/: AnyType.cpp
